k8s/externaldns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.opensource.zalan.do/teapot/external-dns:latest
          args:
            - --source=service # ingress is also possible
            - --source=ingress
            - --domain-filter=nikon.host # (optional) limit to only example.com domains; change to match the zone created above.
            - --provider=digitalocean
